--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "axios": "^0.21.1",
     "concurrently": "^6.0.2",
     "express": "^4.17.1",
+    "knex": "^0.95.7",
+    "mysql2": "^2.2.5",
     "node-sass": "^5.0.0",
+    "puppeteer": "^10.1.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.8",
     "react": "^17.0.2",
     "react-div-100vh": "^0.6.0",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "user-agents": "^1.0.719",
     "web-vitals": "^1.1.1"
   },
   "main": "src/backend/server.js",
-  "proxy": "https://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "node src/backend/server.js",
     "server": "nodemon src/backend/server.js",
@@ -45,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^8.2.0",
+    "jsdom": "^16.6.0"
   }
 }
