update before file restructure

--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "concurrently": "^6.0.2",
+    "connect-session-knex": "^2.1.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.6",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
     "mysql2": "^2.2.5",
     "node-sass": "^5.0.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "puppeteer": "^10.1.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-div-100vh": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-lazyload": "^3.2.0",
@@ -23,6 +34,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "user-agents": "^1.0.719",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "main": "src/backend/server.js",
