migrate from cleardb to jawsdb

--- a/backend/configs/dev-config.env
+++ b/backend/configs/dev-config.env
@@ -6,15 +6,16 @@ WGER_TOKEN_KEY=fe86c8c273cb30da0964cc478c09f10445fae7b5
 WORKOUT_EXERCISE_URL=https://wger.de/api/v2/exercise/?language=2
 WORKOUT_MUSCLE_URL=https://wger.de/api/v2/muscle
 
-CLEARDB_DATABASE_URL: mysql://b2a69a9cf0470a:40b6d0fd@us-cdbr-east-05.cleardb.net/heroku_2e19ecc76b6280a?reconnect=true
-DB_PROD_HOST=us-cdbr-east-05.cleardb.net
-DB_PROD_NAME=heroku_2e19ecc76b6280a
-DB_PROD_USER=b2a69a9cf0470a
-DB_PROD_PASS=40b6d0fd
 
 DB_DEV_HOST=127.0.0.1
 DB_DEV_USER=cisco
 DB_DEV_PASS=123456
 DB_DEV_NAME=fitness
 
+JAWSDB_DATABASE_URL=mysql://cpjxvphvgsycru4m:j0edi6dx84jum8lb@qao3ibsa7hhgecbv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xlxikce4ee4wl2lq
+DB_PROD_HOST=qao3ibsa7hhgecbv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_PROD_NAME=xlxikce4ee4wl2lq
+DB_PROD_USER=cpjxvphvgsycru4m
+DB_PROD_PASS=j0edi6dx84jum8lb
 
+mysql --host=qao3ibsa7hhgecbv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com --user=cpjxvphvgsycru4m --password=j0edi6dx84jum8lb --reconnect xlxikce4ee4wl2lq < Desktop/projects/mysql_backups/mysql_fitness__backup.sql
